Added endpoints to fetch single user's match and list of user's matches.